--- a/blackjack_app/templates/blackjack_app/game.html
+++ b/blackjack_app/templates/blackjack_app/game.html
@@ -33,18 +33,24 @@
             {% if blackjack %}
                 <h3>Blackjack! You win!</h3>
                 <a href="{% url 'reset_game' %}" class="btn btn-success">Start New Game</a>
-                <a href="{% url 'profile' %}" class="btn btn-info">View Profile & Stats</a>
+                <!--Vulnerability #1: Using user input to fetch profile-->
+                <a href="{% url 'profile' %}?profile_id={{ profile_id }}" class="btn btn-info">View Profile & Stats</a>
+                <!--Fix: <a href="{% url 'profile' %}" class="btn btn-info">View Profile & Stats</a> -->
                 <a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>
             {% elif winner %}
                 <h3>{{ winner }} wins!</h3>
                 <a href="{% url 'reset_game' %}" class="btn btn-success">Start New Game</a>
-                <a href="{% url 'profile' %}" class="btn btn-info">View Profile & Stats</a>
+                <!--Vulnerability #1: Using user input to fetch profile-->
+                <a href="{% url 'profile' %}?profile_id={{ profile_id }}" class="btn btn-info">View Profile & Stats</a>
+                <!--Fix: <a href="{% url 'profile' %}" class="btn btn-info">View Profile & Stats</a> -->
                 <a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>
             {% else %}
                 {% if is_player_bust %}
                     <h3>You busted! Dealer wins!</h3>
                     <a href="{% url 'reset_game' %}" class="btn btn-success">Start New Game</a>
-                    <a href="{% url 'profile' %}" class="btn btn-info">View Profile & Stats</a>
+                    <!--Vulnerability #1: Using user input to fetch profile-->
+                    <a href="{% url 'profile' %}?profile_id={{ profile_id }}" class="btn btn-info">View Profile & Stats</a>
+                    <!--Fix: <a href="{% url 'profile' %}" class="btn btn-info">View Profile & Stats</a> -->
                     <a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>
                 {% else %}
                     <a href="{% url 'player_hit' %}" class="btn btn-primary">Hit</a>
