--- a/blackjack_app/templates/blackjack_app/home.html
+++ b/blackjack_app/templates/blackjack_app/home.html
@@ -16,6 +16,8 @@
     <p>Start with $100 and try to make it to $1,000 to win a mysterious prize! If you run out of money, your account will be deleted.</p>
     <h2>Your Current Balance: ${{ request.user.userprofile.money }}</h2>
     <a href="{% url 'start_game' %}" class="btn btn-primary">Play Game</a>
-    <a href="{% url 'profile' %}" class="btn btn-info">View Profile</a>
+    <!--Vulnerability #1: Using user input to fetch profile-->
+    <a href="{% url 'profile' %}?profile_id={{ profile_id }}" class="btn btn-info">View Profile</a>
+    <!--Fix: <a href="{% url 'profile' %}" class="btn btn-info">View Profile</a> -->
 </div>
 {% endblock %}
